--- a/app/src/main/res/layout/activity_order_submit_complete.xml
+++ b/app/src/main/res/layout/activity_order_submit_complete.xml
@@ -166,7 +166,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:elevation="10dp">
+            android:elevation="10dp"
+            android:id="@+id/order_confirm_card">
 
             <LinearLayout
                 android:gravity="center"
@@ -198,7 +199,8 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    >
                     <TextView
                         android:textColor="@color/blackTextColor"
                         android:textSize="16sp"
@@ -220,7 +222,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:elevation="10dp">
+            android:elevation="10dp"
+            android:id="@+id/food_on_the_way">
 
             <LinearLayout
                 android:gravity="center"
@@ -274,7 +277,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:elevation="10dp">
+            android:elevation="10dp"
+            android:id="@+id/order_deliver_card">
 
             <LinearLayout
                 android:gravity="center"
