--- a/app/src/main/res/layout/activity_pre_order_time_select.xml
+++ b/app/src/main/res/layout/activity_pre_order_time_select.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".PreOrderTimeSelect">
+    tools:context=".PreOrderTimeSelect"
+    android:id="@+id/pre_order_info_layout">
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -52,7 +53,7 @@
         android:id="@+id/placeOrderId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Place Order"
+        android:text="Time Confirm"
         android:gravity="center"
         android:layout_marginBottom="2dp"
         android:layout_marginTop="5dp"
