--- a/app/src/main/res/layout/activity_friend_history_details.xml
+++ b/app/src/main/res/layout/activity_friend_history_details.xml
@@ -5,12 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="20dp"
+
     tools:context=".FriendHistoryDetails">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:layout_marginBottom="20dp"
+        android:layout_alignParentTop="true"
+        android:id="@+id/topprofile"
         >
 
         <ImageView
@@ -72,15 +80,21 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topprofile"
+        android:layout_marginBottom="90dp">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+
+
+        >
 
     <TableLayout
         android:id="@+id/table_of_order_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:stretchColumns="0,1,2"
         android:gravity="center">
 
@@ -173,9 +187,7 @@
     </LinearLayout>
     </ScrollView>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
 
     <Button
         android:id="@+id/bt_remove_friend"
@@ -184,10 +196,10 @@
         android:text="Remove Friend"
         android:gravity="center"
         android:layout_margin="10dp"
-    android:backgroundTint="#F00606"
+        android:backgroundTint="#F00606"
         android:padding="15dp"
+      android:layout_alignParentBottom="true"
 
-android:layout_alignParentBottom="true"
         />
     </RelativeLayout>
 </LinearLayout>
