--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="160dp"
     android:orientation="vertical"
-    android:background="#ffcc00"
+    android:background="@drawable/drawerinfobackground"
     android:padding="20dp">
 
     <ImageView
