--- a/app/src/main/res/layout/group_fragment.xml
+++ b/app/src/main/res/layout/group_fragment.xml
@@ -153,6 +153,7 @@
 
 
                         <TextView
+                            android:id="@+id/tv_Total_earn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="0"
