--- a/app/src/main/res/layout/activity_tab_fragment_nearby.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_nearby.xml
@@ -15,6 +15,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_numbers"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
