--- a/app/src/main/res/layout/tab_fragment_nearby_restaurant_list.xml
+++ b/app/src/main/res/layout/tab_fragment_nearby_restaurant_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,9 +8,8 @@
     android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
     app:cardCornerRadius="4dp"
-    android:padding="4dp"
-    app:cardElevation="20dp"
-    android:minHeight="200dp">
+android:elevation="10dp"
+>
     <FrameLayout
 
         android:layout_width="match_parent"
@@ -19,25 +19,23 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="270dp"
             android:orientation="vertical">
 
 
             <LinearLayout
                 android:id="@+id/restaurant_banner"
-
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_height="175dp"
+                android:layout_marginBottom="25dp"
+                android:orientation="vertical">
+
 
                 <ImageView
                     android:id="@+id/image_banner_of_restaurant"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:src="@drawable/burgerbackground"
-                     />
+                    android:src="@drawable/biriyani" />
 
 
             </LinearLayout>
@@ -50,6 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_margin="10dp"
+                    android:padding="5dp"
                     android:orientation="vertical">
                     <TextView
                         android:id="@+id/tv_item_number"
@@ -96,14 +95,14 @@
         </LinearLayout>
 
 
-
         <ImageView
             android:id="@+id/image_logo_of_restaurant"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="bottom"
+        android:layout_marginBottom="60dp"
+android:layout_marginLeft="5dp"
             android:adjustViewBounds="true"
-            android:layout_margin="10dp"
             android:src="@drawable/foodexpress_icon" />
 
 
