--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#ffcc00</color>
-    <color name="colorPrimaryDark">#D0060707</color>
+    <color name="colorPrimaryDark">#070707</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
     <color name="signupColor">#066e8a</color>
@@ -14,6 +14,6 @@
 
     <color name="green">#055F09</color>
     <color name="profileBackground">#fff</color>
-    <color name="blackTextColor">#000</color>
-    <color name="profileEditTextColor">#707070</color>
+    <color name="blackTextColor">#070707</color>
+    <color name="profileEditTextColor">#070707</color>
 </resources>
