--- a/app/src/main/res/layout/activity_food_cart_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_page.xml
@@ -205,30 +205,7 @@
 
 
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_margin="6dp">
 
-                    <TextView
-
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:text="Discount(Point)" />
-                    <TextView
-                        android:id="@+id/tv_discount_amount"
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:text="0.0"/>
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:text="Taka"/>
-
-                </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -256,6 +233,40 @@
             </LinearLayout>
 
                 </com.google.android.material.card.MaterialCardView>
+
+<com.google.android.material.card.MaterialCardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:elevation="10dp"
+    android:layout_margin="10dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="6dp">
+
+                    <TextView
+
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="#33A738"
+                        android:text="Discount (Point)" />
+                    <TextView
+                        android:id="@+id/tv_discount_amount"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:textColor="#33A738"
+                        android:text="0.0"/>
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:textColor="#33A738"
+                        android:text="Taka"/>
+
+                </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
 
 <com.google.android.material.card.MaterialCardView
     android:layout_width="match_parent"
@@ -331,16 +342,16 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/userPointTextInputLayout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="250dp"
+                        android:layout_width="230dp"
                         android:layout_marginRight="10dp"
                         android:layout_height="wrap_content">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/userPointTextInputEditText"
-                            android:layout_width="250dp"
+                            android:layout_width="230dp"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="80dp"
-                            android:textSize="14sp"
+                            android:textSize="13sp"
                             android:hint="Max point use per order 50" />
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -348,7 +359,7 @@
                         android:id="@+id/bt_add_point"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:backgroundTint="#205E23"
+                        android:backgroundTint="#ffcc00"
                         android:text="ADD +"
                         android:textColor="#0C0C0C"
                         />
@@ -400,17 +411,25 @@
                     android:textSize="17sp"
 
                     />
-                <TextView
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:elevation="5dp">
+
+
+        <TextView
                     android:id="@+id/tv_user_address_map_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                   android:padding="10dp"
-                    android:layout_margin="10dp"
+                  android:layout_margin="2dp"
                     android:textSize="14sp"
                     android:maxLines="1"
                     android:text="c1, monallee tower, bastola"
-                    android:background="@drawable/background_delivery_address"
+
                     />
+    </com.google.android.material.card.MaterialCardView>
 
 
 </LinearLayout>
@@ -461,7 +480,7 @@
                     android:gravity="center"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="5dp"
-                    android:backgroundTint="#0C520F"
+                    android:backgroundTint="#ffcc00"
                     android:textColor="#0A0909"
                     />
             </LinearLayout>
