--- a/app/src/main/res/layout/activity_search_restaurant.xml
+++ b/app/src/main/res/layout/activity_search_restaurant.xml
@@ -27,14 +27,12 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+   android:layout_margin="10dp" >
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchItems"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             app:iconifiedByDefault="false"
             app:queryHint="Search Restaurant, food items...">
 
