--- a/app/src/main/res/layout/activity_user_auto_complete_adress.xml
+++ b/app/src/main/res/layout/activity_user_auto_complete_adress.xml
@@ -36,7 +36,9 @@ tools:context=".UserAutoCompleteAdress">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+  android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="5dp"
       >
 
         <ImageView
@@ -49,15 +51,13 @@ tools:context=".UserAutoCompleteAdress">
 
         <AutoCompleteTextView
             android:id="@+id/address"
-            android:textSize="13dp"
-            android:padding="10dp"
+            android:textSize="16sp"
+            android:theme="@style/Autocomplete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="55dp"
-
             android:imeOptions="actionSearch"
             android:singleLine="true"
-
             android:hint="Search Address Here"/>
 
 
