--- a/app/src/main/res/layout/group_list_design.xml
+++ b/app/src/main/res/layout/group_list_design.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+>
+
+
      <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
@@ -78,10 +81,10 @@
                     android:id="@+id/bt_add_point"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="#36A03C"
+                    android:backgroundTint="#ffcc00"
                     android:text="+ Add"
                     android:textColor="#0C0C0C"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     />
 
             </LinearLayout>
