--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,7 +37,7 @@
 
     <style name="Autocomplete">
         <item name="colorControlNormal">@color/white</item>
-        <item name="colorControlActivated">@color/blackTextColor</item>
+        <item name="colorControlActivated">@color/white</item>
     </style>
 
     <style name="AppTheme2" parent="Theme.AppCompat.Light.DarkActionBar">
