restaurant item add + slide bar update

--- a/app/src/main/res/layout/activity_restaurant_menu_page.xml
+++ b/app/src/main/res/layout/activity_restaurant_menu_page.xml
@@ -37,6 +37,7 @@
 
 
             <LinearLayout
+                android:id="@+id/restaurant_banner"
                 android:background="@drawable/burgerbackground"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
@@ -81,6 +82,7 @@
 
 
         <ImageView
+            android:id="@+id/restaurant_logo"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
