--- a/app/src/main/res/layout/food_menu_item_list.xml
+++ b/app/src/main/res/layout/food_menu_item_list.xml
@@ -30,9 +30,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp">
+            android:gravity="center">
+           <!-- android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp">-->
             <TextView
                 android:id="@+id/tv_item_id"
                 android:layout_width="0dp"
