--- a/app/src/main/res/layout/activity_restaurant_menu_page.xml
+++ b/app/src/main/res/layout/activity_restaurant_menu_page.xml
@@ -18,98 +18,82 @@
 
 
 
-<com.google.android.material.card.MaterialCardView
+    <com.google.android.material.card.MaterialCardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="4dp"
-    android:layout_margin="10dp"
-    >
-    <FrameLayout
+    android:layout_margin="10dp">
+        <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:orientation="vertical">
+            <LinearLayout
+                android:id="@+id/restaurant_banner"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:orientation="vertical"
+                android:background="@drawable/burgerbackground">
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="230dp"
+                android:orientation="vertical"
+                android:layout_weight="1">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_margin="10dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_restaurnat_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:text="Burger King"
+                            android:textColor="#971409"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_cusine"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Cuisine"
+                            android:textColor="#3C1212" />
+                    </LinearLayout>
 
 
+                </RelativeLayout>
 
-
+            </LinearLayout>
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="185dp"
+                android:id="@+id/restaurant_logo"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:adjustViewBounds="true"
+                android:layout_margin="10dp"
+                android:src="@drawable/foodexpress_icon" />
 
-                android:src="@drawable/biriyani"/>
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            </LinearLayout>
+        </FrameLayout>
 
-        <LinearLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tv_restaurnat_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:text="Burger King"
-                        android:textColor="#971409"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tv_cusine"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Cuisine"
-                        android:textColor="#3C1212" />
-                </LinearLayout>
-
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:adjustViewBounds="true"
-            android:layout_margin="10dp"
-            android:src="@drawable/foodexpress_icon" />
-
-
-
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-        </LinearLayout>
-    </FrameLayout>
-
-</com.google.android.material.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
 
     <ProgressBar
         android:id="@+id/pv_restaurant_menu_item"
